--- a/_publications/2019-07-17-caronte.md
+++ b/_publications/2019-07-17-caronte.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2019-07-17-caronte
 date: 2019-07-17
 thesis: True
-venue: 'In Proceedings of the 2019 IEEE European Symposium on Security and Privacy Workshops (<b>EuroS&PW 2019</b>) - 1st Workshop on Attackers and Cyber-Crime Operations'
+venue: 'In Proceedings of the 2019 IEEE European Symposium on Security and Privacy Workshops (<b>EuroS&PW 2019</b>) - 1st Workshop on Attackers and Cyber-Crime Operations (<b>WACCO</b>)'
 open_access_link: "https://arxiv.org/abs/2009.08148"
 publisher_link: 'https://ieeexplore.ieee.org/abstract/document/8802484'
 authors: 'Campobasso, M.; Burda, P.; Allodi, L.'
