--- a/_publications/2024-03-07-thesis.md
+++ b/_publications/2024-03-07-thesis.md
@@ -9,7 +9,7 @@ open_access_link: "https://michelecampobasso.github.io/assets/papers/MC-final%20
 publisher_link: 'https://research.tue.nl/en/publications/understanding-and-characterizing-the-cybercriminal-ecosystem-enab'
 slides: "https:///michelecampobasso.github.io/assets/slides/defense-presentation.pdf"
 authors: 'Campobasso, M.'
-abstract: "The digitalization of our society has improved the quality of human life at large, but also created new opportunities for malicious (cyber) actors to exploit weaknesses of digital systems and to find new venues to perpetrate fraud. It is well known that a sizable portion of cybercriminals meet in hundreds of online communities (often in the so-called “dark” or “deep” web) to engage with like-minded individuals, share knowledge, and trade offensive tools and services. Monitoring and extracting information from these communities is a challenging task, yet crucial to obtain valuable threat intelligence, which can be used to better prepare against new threats and deploy tailored defenses to thwart attacks originating from the underground. Private sector and law enforcement agencies alike would then be able to better protect final users and societal institutions from the risks associated with criminal activities.<br>
+abstract: "The digitalization of our society has improved the quality of human life at large, but also created new opportunities for malicious (cyber) actors to exploit weaknesses of digital systems and to find new venues to perpetrate fraud. It is well known that a sizable portion of cybercriminals meet in hundreds of online communities (often in the so-called “dark” or “deep” web) to engage with like-minded individuals, share knowledge, and trade offensive tools and services. Monitoring and extracting information from these communities is a challenging task, yet crucial to obtain valuable threat intelligence, which can be used to better prepare against new threats and deploy tailored defenses to thwart attacks originating from the underground. Private sector and law enforcement agencies alike would then be able to better protect final users and societal institutions from the risks associated with criminal activities.<br><br>
 
 However, as of today it is unclear whether all hacking communities (generally in the form of forums) equally contribute to supporting cybercriminal activities and technological innovation. Many underground markets seem to only trade low-tech products like old password leaks and obsolete malware that is immediately detected from most existing defenses. Still, cybercrime and its economic and societal impact increase year by year. Considering this, it is critical to investigate the properties of marketplaces in relation to the traded products, to identify what are the characteristics that distinguish those where the trade of effective cybercriminal technology happens from those where it does not. Lacking this ability may lead to biased threat intelligence or overestimating the risks associated with petty crime or scammer activities. However, extracting forum data from underground criminal communities (particularly prominent ones) can be a non-trivial task, due to the scale of the phenomenon, their diversity in terms of access, interaction, language, and the countermeasures they put in place against internet crawlers. Hence, we formulate the following research question: 
 
