--- a/_teaching/2019-ocs.md
+++ b/_teaching/2019-ocs.md
@@ -3,7 +3,9 @@ title: "Teaching assistant"
 collection: teaching
 permalink: /teaching/2019-offensive-cyber-security
 start-date: 2019-11-01
-end-date: 
+end-date: 2022-09-01
 course: "Offensive Computer Security (2IC80)"
 course_page: "https://lallodi.github.io/teaching/"
+
+During the course...
 ---
