--- a/_publications/2024-03-07-thesis.md
+++ b/_publications/2024-03-07-thesis.md
@@ -13,7 +13,7 @@ abstract: "The digitalization of our society has improved the quality of human l
 
 However, as of today it is unclear whether all hacking communities (generally in the form of forums) equally contribute to supporting cybercriminal activities and technological innovation. Many underground markets seem to only trade low-tech products like old password leaks and obsolete malware that is immediately detected from most existing defenses. Still, cybercrime and its economic and societal impact increase year by year. Considering this, it is critical to investigate the properties of marketplaces in relation to the traded products, to identify what are the characteristics that distinguish those where the trade of effective cybercriminal technology happens from those where it does not. Lacking this ability may lead to biased threat intelligence or overestimating the risks associated with petty crime or scammer activities. However, extracting forum data from underground criminal communities (particularly prominent ones) can be a non-trivial task, due to the scale of the phenomenon, their diversity in terms of access, interaction, language, and the countermeasures they put in place against internet crawlers. Hence, we formulate the following research question: 
 
-	<blockquote><i>How can we identify which cybercriminal marketplaces can support the trade of innovative offensive products and services, and how can we effectively monitor their activity to evaluate the threat they pose?</i></blockquote>
+	<blockquote style=\"margin-left: 1em; margin-right: 1em\"><i>How can we identify which cybercriminal marketplaces can support the trade of innovative offensive products and services, and how can we effectively monitor their activity to evaluate the threat they pose?</i></blockquote>
 
 	We first conduct a preliminary study on the segregation of underground marketplaces in relation to the maturity of the offensive tools and services they provision. We aggregate information from industry reports and scientific literature, and we corroborate these findings by manually exploring 13 underground markets. Our study finds indication that more segregated markets tend to offer more mature offensive tools, and they tend to be better protected against unwanted access and monitoring activity.  
 
